// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build distribution should have a predictable ephemeral navigation based on route configuration: GUI routes expected covered, missing routes 1`] = `
[
  {
    "coverage": "TRUE",
    "path": "/openshift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/OpenShift Container Platform",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift-container",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/container",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/platform",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/shift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/openshift-dedicated",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/dedicated",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/OpenShift-metrics",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/metrics",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhacs",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/advanced",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/cluster",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/security",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/kubernetes",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/acs",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhel",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/insights",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/enterprise",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/linux",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/el",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/x86",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/ibm",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/power",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/sat",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/server",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/capsule",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "TRUE",
    "path": "/rhods",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/application-services",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/data",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/science",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/ods",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/rosa",
    "productGroup": [
      "rosa",
    ],
    "productId": [
      "rosa",
    ],
    "productVariants": [],
  },
]
`;

exports[`Build distribution should have a predictable ephemeral navigation based on route configuration: YAML routes expected covered, missing routes 1`] = `
[
  {
    "coverage": "TRUE",
    "path": "/rhel",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhods",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhacs",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhel",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-sap-x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift-container",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
]
`;

exports[`Build distribution should match a specific file output 1`] = `
[
  "",
  "./dist/css/24*css",
  "./dist/css/29*css",
  "./dist/css/42*css",
  "./dist/css/68*css",
  "./dist/fed-mods.json",
  "./dist/fonts/graph2x.png",
  "./dist/fonts/graph4x.png",
  "./dist/js/128*js",
  "./dist/js/155*js",
  "./dist/js/208*js",
  "./dist/js/24*js",
  "./dist/js/29*js",
  "./dist/js/294*js",
  "./dist/js/294*txt",
  "./dist/js/295*js",
  "./dist/js/355*js",
  "./dist/js/355*txt",
  "./dist/js/361*js",
  "./dist/js/407*js",
  "./dist/js/419*js",
  "./dist/js/42*js",
  "./dist/js/464*js",
  "./dist/js/480*js",
  "./dist/js/491*js",
  "./dist/js/519*js",
  "./dist/js/558*js",
  "./dist/js/558*txt",
  "./dist/js/559*js",
  "./dist/js/559*txt",
  "./dist/js/588*js",
  "./dist/js/588*txt",
  "./dist/js/669*js",
  "./dist/js/669*txt",
  "./dist/js/679*js",
  "./dist/js/679*txt",
  "./dist/js/68*js",
  "./dist/js/68*txt",
  "./dist/js/713*js",
  "./dist/js/722*js",
  "./dist/js/77*js",
  "./dist/js/791*js",
  "./dist/js/8*js",
  "./dist/js/80*js",
  "./dist/js/806*js",
  "./dist/js/812*js",
  "./dist/js/816*js",
  "./dist/js/86*js",
  "./dist/js/876*js",
  "./dist/js/878*js",
  "./dist/js/889*js",
  "./dist/js/891*js",
  "./dist/js/93*js",
  "./dist/js/935*js",
  "./dist/js/935*txt",
  "./dist/js/App*js",
  "./dist/js/exposed-./RootApp*js",
  "./dist/locales/en-US.json",
  "./dist/locales/en.json",
  "./dist/locales/locales.json",
  "./dist/sourcemaps/128*map",
  "./dist/sourcemaps/155*map",
  "./dist/sourcemaps/208*map",
  "./dist/sourcemaps/24*map",
  "./dist/sourcemaps/29*map",
  "./dist/sourcemaps/294*map",
  "./dist/sourcemaps/295*map",
  "./dist/sourcemaps/355*map",
  "./dist/sourcemaps/361*map",
  "./dist/sourcemaps/407*map",
  "./dist/sourcemaps/419*map",
  "./dist/sourcemaps/464*map",
  "./dist/sourcemaps/480*map",
  "./dist/sourcemaps/491*map",
  "./dist/sourcemaps/558*map",
  "./dist/sourcemaps/559*map",
  "./dist/sourcemaps/588*map",
  "./dist/sourcemaps/669*map",
  "./dist/sourcemaps/679*map",
  "./dist/sourcemaps/68*map",
  "./dist/sourcemaps/713*map",
  "./dist/sourcemaps/77*map",
  "./dist/sourcemaps/791*map",
  "./dist/sourcemaps/8*map",
  "./dist/sourcemaps/80*map",
  "./dist/sourcemaps/806*map",
  "./dist/sourcemaps/812*map",
  "./dist/sourcemaps/816*map",
  "./dist/sourcemaps/876*map",
  "./dist/sourcemaps/878*map",
  "./dist/sourcemaps/889*map",
  "./dist/sourcemaps/891*map",
  "./dist/sourcemaps/93*map",
  "./dist/sourcemaps/935*map",
  "./dist/sourcemaps/App*map",
  "./dist/sourcemaps/exposed-./RootApp*map",
  "./dist/subscriptions*js",
]
`;
